Fixed overflow error + added arrow

--- a/src/components/GifList.css
+++ b/src/components/GifList.css
@@ -8,4 +8,5 @@
 	padding: 20px 10px;
 	margin-top: 4rem;
 	max-height: 400px;
+	max-width: 80vw;
 }
