--- a/src/components/StashedGifsButton.css
+++ b/src/components/StashedGifsButton.css
@@ -1,6 +1,6 @@
 .StashedGifsButton-container {
 	display: flex;
-	width: 100%;
+	width: 250px;
 	scale: 1.5;
 }
 
