--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@
 
 body {
 	margin: 3rem;
-	margin-right: 5rem;
 	display: flex;
 	min-width: 320px;
 	min-height: 100vh;
